# Generated by Django 3.2.16 on 2022-11-27 00:16

from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('roadmaps', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Site',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=150, verbose_name='Наименование')),
                ('domain', models.URLField(verbose_name='Домен')),
            ],
            options={
                'verbose_name': 'Сайт',
                'verbose_name_plural': 'Сайты',
            },
        ),
        migrations.CreateModel(
            name='Response',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('last_update', models.DateTimeField(auto_now=True, verbose_name='Последнее обновление')),
                ('result', models.TextField(blank=True, null=True, verbose_name='Результат')),
                ('site_param', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='roadmaps.siteparam', verbose_name='Параметры сайта')),
            ],
            options={
                'verbose_name': 'Резултат парсинга',
                'verbose_name_plural': 'Резултаты парсинга',
            },
        ),
    ]
